<resources>
    <string name="app_name">JobInSider</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open">Open</string>
    <string name="close">Close</string>

    <string name="sign_in"> Sign in </string>
    <string name="user_name">User Name</string>

    <string name="password">Password</string>
    <string name="btnLogin">Login</string>
    <string name="or">OR</string>
    <string name="btn_register">Register</string>
    <string name="welcome">Hi, Welcome Back!</string>
    <string name="perfectjob_text">Find your Perfect Job</string>
    <string name="search_hint"> What are you looking for? </string>
    <string name="searchbarHint">What are you looking for?</string>
    <string name="engineeringtxt">Engineering</string>
    <string name="healthTxt">Health</string>
    <string name="buniessTxt">Business</string>
    <string name="computerTxt">Technology</string>
    <string name="viewallBtn">View All Jobs</string>
    <string name="categoryTxt">Select the Service You want</string>
    <string name="postjobText">Post Job</string>
    <string name="registrationForm">Registration Form</string>
    <string name="birthdateText">Birth Date</string>
    <string name="maleCb">Male</string>
    <string name="genderText">Gender</string>
    <string name="cbfemaleText">Female</string>
    <string name="phonenumberText">Phone Number</string>
    <string name="emailSpace">Email</string>
    <string name="address">Address</string>
    <string name="birthdateTxt">Birth Date</string>
    <string name="selfIntro">Self Introduction</string>
    <string name="jobportal">No 1 Job Portal in Sri Lanka</string>
    <string name="helloText">Hello Dakshina!</string>
    <string name="premiumMember">Gold Member</string>
    <string name="siginn">Sign In</string>
    <string name="findaJob">Find A Job</string>
    <string name="jobpost">Post A job</string>
    <string name="reserveguide">Reserve A Guider</string>
    <string name="allsettings">View User Settings</string>
    <string name="updatebtnjobprovider">Update</string>
    <string name="deletejobbutton">Delete</string>
    <string name="alreadyuserloginsignup">Already an User? Login</string>
    <string name="signuppagetxt">Sign up or login to see our top picks for you</string>

    <string-array name="user_type_entries">
        <item>Select Job Provider</item>
        <item>IFS Sri Lanka</item>
        <item>99x Technology</item>
        <item>MillenniumIT ESP</item>
        <item>Virtusa Corporation</item>
        <item>Wavenet International</item>
        <item>99X Services</item>
        <item>HCL Technologies Sri Lanka</item>
        <item>HSBC Electronic Data Processing (Lanka) Pvt Ltd</item>
        <item>WSO2 Lanka (Pvt) Ltd</item>
        <item>99x</item>
    </string-array>
</resources>